--- a/package.json
+++ b/package.json
@@ -12,10 +12,21 @@
     "gatsby": "^2.0.33",
     "gatsby-plugin-sass": "^2.0.7",
     "gatsby-source-filesystem": "^2.0.12",
+    "gatsby-transformer-json": "^2.1.6",
     "gatsby-transformer-remark": "^2.1.15",
     "node-sass": "^4.11.0",
     "react": "^16.5.1",
     "react-body-classname": "^1.2.0",
     "react-dom": "^16.5.1"
+  },
+  "devDependencies": {
+    "babel-eslint": "^9.0.0",
+    "eslint": "^5.5.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-prettier": "^2.0.1",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
+    "prettier-eslint": "^8.8.2"
   }
 }
