--- a/src/data/social.yaml
+++ b/src/data/social.yaml
@@ -1,5 +1,5 @@
-vimeo: ""
-twitter: "https://twitter.com/figuritltd"
-instagram: ""
-linkedin: "https://www.linkedin.com/in/linda-chesher-81a35618/"
-facebook: ""
+vimeo: ''
+twitter: ''
+instagram: ''
+linkedin: ''
+facebook: ''
