--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "gatsby-starter-hello-world",
-  "description": "Gatsby hello world starter",
+  "name": "gatsby-serif-theme",
+  "version": "1.0.0",
+  "author": "Robert Austin <rob@jugglerdigital.com>",
   "license": "MIT",
   "scripts": {
     "develop": "gatsby develop",
@@ -10,13 +11,15 @@
   },
   "dependencies": {
     "gatsby": "^2.0.33",
+    "gatsby-plugin-react-helmet": "^3.0.4",
     "gatsby-plugin-sass": "^2.0.7",
     "gatsby-source-filesystem": "^2.0.12",
     "gatsby-transformer-json": "^2.1.6",
     "gatsby-transformer-remark": "^2.1.15",
     "node-sass": "^4.11.0",
     "react": "^16.5.1",
-    "react-dom": "^16.5.1"
+    "react-dom": "^16.5.1",
+    "react-helmet": "^5.2.0"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
