--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "name": "gatsby-serif-theme",
   "version": "1.0.0",
-  "author": "Robert Austin <rob@jugglerdigital.com>",
+  "author": "Robert Austin <rob@zerostatic.iom>",
   "license": "MIT",
   "scripts": {
     "develop": "gatsby develop",
     "start": "npm run develop",
-    "build": "gatsby build",
-    "serve": "gatsby serve",
-    "lint": "eslint --fix --ext .js ."
+    "build": "gatsby build"
   },
   "dependencies": {
     "gatsby": "^2.24.51",
     "gatsby-plugin-google-analytics": "^2.3.13",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-sass": "^2.3.12",
     "gatsby-source-filesystem": "^2.3.26",
@@ -25,25 +24,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-decorators": "^7.8.3",
-    "@babel/plugin-proposal-export-namespace-from": "^7.8.3",
-    "@babel/plugin-proposal-function-sent": "^7.8.3",
-    "@babel/plugin-proposal-numeric-separator": "^7.8.3",
-    "@babel/plugin-proposal-throw-expressions": "^7.8.3",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.9.6",
-    "@babel/preset-env": "^7.9.5",
-    "@babel/preset-react": "^7.9.4",
-    "@babel/preset-stage-2": "^7.8.3",
-    "@babel/standalone": "^7.9.5",
     "babel-eslint": "10.0.3",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^3.0.0"
+    "eslint-plugin-react": "^7.19.0"
   }
 }
