--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,12 @@
 {
     "parser": "babel-eslint",
     "extends": [
-        "eslint:recommended",
-        "plugin:react/recommended"
+        "airbnb"
     ],
     "plugins": [
         "react",
-        "jsx-a11y"
+        "jsx-a11y",
+        "import"
     ],
     "env": {
         "es6": true,
@@ -27,10 +27,12 @@
         "no-unused-vars": 0,
         "no-console": 0,
         "no-useless-escape": 0,
+        "prefer-destructuring": 0,
         "comma-dangle": ["error", "never"],
         "indent": ["error", 2],
         "react/no-unescaped-entities": 0,
         "react/prop-types": 0,
+        "react/destructuring-assignment": 0,
         "react/jsx-props-no-spreading": ["off"],
         "react/forbid-prop-types": ["off"],
         "class-methods-use-this": 0,
