--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gatsby-serif-theme",
   "version": "1.0.0",
-  "author": "Robert Austin <rob@zerostatic.iom>",
+  "author": "Robert Austin <rob@zerostatic.io>",
   "license": "MIT",
   "scripts": {
     "develop": "gatsby develop",
@@ -26,6 +26,7 @@
     "@babel/core": "^7.9.0",
     "babel-eslint": "10.0.3",
     "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0"
