--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,7 @@
         "react/prop-types": 0,
         "react/destructuring-assignment": 0,
         "react/jsx-props-no-spreading": ["off"],
+        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
         "react/forbid-prop-types": ["off"],
         "class-methods-use-this": 0,
         "import/imports-first": 0,
