--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "gatsby-source-filesystem": "^2.3.26",
     "gatsby-transformer-json": "^2.4.11",
     "gatsby-transformer-remark": "^2.8.30",
-    "node-sass": "^4.14.1",
+    "node-sass": "^4.14.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0"
@@ -29,6 +29,7 @@
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.19.0"
+    "eslint-plugin-react": "^7.19.0",
+    "gulp-sass": "^4.1.0"
   }
 }
