--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "start": "npm run develop",
     "build": "gatsby build"
   },
+  "engines": {
+    "node": ">=12"
+  },
+  "engineStrict": true,
   "dependencies": {
     "gatsby": "^3.0.3",
     "gatsby-plugin-google-analytics": "^3.0.0",
@@ -26,7 +30,7 @@
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/eslint-parser": "^7.13.8",
-     "eslint": "^7.21.0",
+    "eslint": "^7.21.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
