update to node 14, update to bootstrap 4.6, fix scss depreciations, fix typos

--- a/src/data/config/config.json
+++ b/src/data/config/config.json
@@ -12,7 +12,7 @@
         "meta_description": "Serif is a modern business theme for Gatsby. It contains content types for the archetypical business website. The theme is fully responsive, blazing fast and artfully illustrated.",
         "meta_og_title": "Gatsby Serif Theme",
         "meta_og_type": "website",
-        "meta_og_url": "https://hugo-gatsby.netlify.app",
+        "meta_og_url": "https://gatsby-serif.netlify.app/",
         "meta_og_image": "https://www.zerostatic.io/theme/gatsby-serif/gatsby-serif-screenshot.png",
         "meta_og_description": "Serif is a modern business theme for Gatsby. It contains content types for the archetypical business website. The theme is fully responsive, blazing fast and artfully illustrated.",
         "meta_twitter_card": "summary",
