--- a/package.json
+++ b/package.json
@@ -14,32 +14,32 @@
   "engineStrict": true,
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
-    "gatsby": "^3.0.3",
-    "gatsby-plugin-google-analytics": "^3.0.0",
+    "gatsby": "^3.12.0",
+    "gatsby-plugin-google-analytics": "^3.12.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-react-helmet": "^4.0.0",
-    "gatsby-plugin-sass": "^4.0.2",
-    "gatsby-source-filesystem": "^3.0.0",
-    "gatsby-transformer-json": "^3.0.0",
-    "gatsby-transformer-remark": "^3.0.0",
-    "node-sass": "^5.0.0",
-    "postcss": "^8.2.7",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "gatsby-plugin-react-helmet": "^4.12.0",
+    "gatsby-plugin-sass": "^4.12.0",
+    "gatsby-source-filesystem": "^3.12.0",
+    "gatsby-transformer-json": "^3.12.0",
+    "gatsby-transformer-remark": "^4.9.0",
+    "postcss": "^8.3.6",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "sass": "^1.38.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.13.10",
-    "@babel/core": "^7.13.10",
-    "@babel/eslint-parser": "^7.13.10",
-    "@babel/eslint-plugin": "^7.13.10",
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/preset-env": "^7.13.10",
-    "@babel/preset-react": "^7.12.13",
-    "eslint": "^7.21.0",
+    "@babel/cli": "^7.14.8",
+    "@babel/core": "^7.15.0",
+    "@babel/eslint-parser": "^7.15.0",
+    "@babel/eslint-plugin": "^7.14.5",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-react": "^7.14.5",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.24.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.22.0"
+    "eslint-plugin-react": "^7.24.0"
   }
 }
