--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "gatsby-serif-theme",
+  "name": "SubeNube",
   "version": "1.2.0",
-  "author": "Robert Austin <rob@zerostatic.io>",
-  "license": "MIT",
+
   "scripts": {
     "develop": "gatsby develop",
     "start": "npm run develop",
@@ -14,17 +13,17 @@
   "engineStrict": true,
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
-    "gatsby": "^3.12.0",
-    "gatsby-plugin-google-analytics": "^3.12.0",
+    "gatsby": "^5.12.4",
+    "gatsby-plugin-google-analytics": "^5.12.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-react-helmet": "^4.12.0",
-    "gatsby-plugin-sass": "^4.12.0",
-    "gatsby-source-filesystem": "^3.12.0",
-    "gatsby-transformer-json": "^3.12.0",
-    "gatsby-transformer-remark": "^4.9.0",
+    "gatsby-plugin-react-helmet": "^6.12.0",
+    "gatsby-plugin-sass": "^6.12.0",
+    "gatsby-source-filesystem": "^5.12.0",
+    "gatsby-transformer-json": "^5.12.0",
+    "gatsby-transformer-remark": "^6.12.0",
     "postcss": "^8.3.6",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.0",
+"react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
     "sass": "^1.38.0"
   },
